# revm-practice

./: .env  Cargo.toml
src/: constants.rs  main.rs  revm-example.rs
